--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 header {
     width: 100vw;
     height: 100vh;
-    background: url(header_bg.webp);
+    background: url(https://cdn.culture.ru/images/e808d577-8062-5b7e-ae59-f7365b6529ce);
     background-size: cover;
     display: flex;
 }
